# redesk

./: .gitmodules  README.md  electron-builder.yml  package-lock.json  package.json
app/: CMakeLists.txt
app/src/: CMakeLists.txt  Client.cpp  Client.h  Server.cpp  main.cpp
